--- a/Pages/ItemCards.cshtml
+++ b/Pages/ItemCards.cshtml
@@ -76,7 +76,7 @@
 
                         <div class="form-group">
                             <label>Description</label>
-                            <textarea asp-for="@Model.ItemCardsFromReport[i].ItemDescription" class="form-control" readonly></textarea>
+                            <textarea asp-for="@Model.ItemCardsFromReport[i].ItemDescription" class="form-control" disabled></textarea>
                         </div>
                         
                         <div class="d-flex justify-content-between">
